--- a/package.json
+++ b/package.json
@@ -24,8 +24,5 @@
   "bugs": {
     "url": "https://github.com/massemanet/learnpurescript/issues"
   },
-  "homepage": "https://github.com/massemanet/learnpurescript",
-  "dependencies": {
-    "grunt-purescript": "0.6.0"
-  }
+  "homepage": "https://github.com/massemanet/learnpurescript"
 }
