--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "grunt": "^0.4.5",
     "grunt-purescript": "^0.6.0"
   },
-  "devDependencies": {},
+    "devDependencies": {"jshint": ""},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
